@@ -1,3 +1,9 @@
+In development:
+
+* Added CK_SUBUNIT support for outputting test information in the subunit wire
+  protocol. See the check manual for more information. (Contributed by Robert
+  Collins).
+
 Mon, Dec 29, 2009: Released Check 0.9.6
   based on r453 (2008-12-01 22:14:15).
 
